prevent video overflow on mobile

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -614,6 +614,16 @@ figure {
   border-radius: 15px;
 }
 
+video {
+  max-width: 100%;
+  height: auto;
+  
+  @media (max-width: 650px) {
+    width: 100% !important;
+    max-width: 100% !important;
+  }
+}
+
 .blogPostIcon {
   width: 14px !important; 
   margin-right: 5px !important;
